Mise à jour du index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
-  <!-- Facebook and Twitter integration -->
+  	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
@@ -80,10 +80,8 @@
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span>
 				</small></p>
 				<ul>
-					<li><a href="#"><i class="icon-facebook2"></i></a></li>
-					<li><a href="#"><i class="icon-twitter2"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+					<li><a href="https://web.facebook.com/M.Credo.VIRCHY/" target="_blank"><i class="icon-facebook2"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/credo-virchy-32b576a4/" target="_blank"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 			</div>
 
@@ -365,14 +363,12 @@
 									    <div class="panel-heading" role="tab" id="headingThree">
 									        <h4 class="panel-title">
 									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-													Baccalauréat Série D
+													Baccalauréat Série D (Juillet 2014, au Cours GAMA de Cotonou)
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>	
-									        </div>
+									        
 									    </div>
 									</div>
 								</div>
@@ -413,15 +409,6 @@
 									    <div class="panel-heading" role="tab" id="headingThree">
 									        <h4 class="panel-title">
 									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-													L’importance du personal branding à l’ère du digital – animé par M. Béni TOSSOU, CEO de Studio PodLab
-									            </a>
-									        </h4>
-									    </div>
-									</div>
-									<div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingFour">
-									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
 													L’importance du personal branding à l’ère du digital – animé par M. Béni TOSSOU, CEO de Studio PodLab
 									            </a>
 									        </h4>
