Mise à jour du index.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 											<div class="desc">
 												<h1>Bonjour, <br>Je suis Credo VIRCHY</h1>
 												<h2>Développeur web passionné, je mets mes compétences au service de vos projets afin de collaborer, innover et créer de la valeur.</h2>
-												<p><a href="#" class="btn btn-primary btn-learn">Télécharger le CV <i class="icon-download4"></i></a></p>
+												<a href="docs/credo.pdf" class="btn btn-primary btn-learn" download>Télécharger le CV <i class="icon-download4"></i></a>
 											</div>
 										</div>
 									</div>
